# github-pr-analytics

./: .env.example  .gitignore  README.md  index.html  pyproject.toml  requirements.txt
.github/workflows/: update-dashboard.yml
config/: settings.py
dashboard/: index.html
dashboard/css/: styles.css  tooltip.css  update_timestamp.css
dashboard/data/: last_update.txt  metrics.json  pr_data.csv
dashboard/js/: dashboard.js
src/: data_fetcher.py  fetch_pr_data.py  test_fetch.py
