[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-pr-analytics"
version = "1.0.0"
description = "Automated GitHub PR Analytics Dashboard"
authors = [{name = "Fathallah Elmasri", email = "aviv-fathallahelmasri@github.com"}]
requires-python = ">=3.10"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
